// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render when cancel button disable properly 1`] = `
Array [
  <View
    style={
      Object {
        "height": "100%",
        "opacity": 0.6,
        "position": "absolute",
        "width": "100%",
      }
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "white",
          "borderRadius": 15,
          "display": "flex",
          "height": 250,
          "justifyContent": "center",
          "position": "absolute",
          "shadowColor": "#23211e",
          "top": "30%",
          "width": "90%",
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "objektiv",
          },
          Object {
            "color": "black",
            "fontFamily": "objektiv-semi-bold",
            "fontSize": 20,
            "textAlign": "center",
            "width": "75%",
          },
        ]
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ed832d",
          "borderColor": "#ed832d",
          "borderRadius": 10,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 30,
          "opacity": 1,
          "paddingHorizontal": 30,
          "paddingVertical": 12,
          "width": "75%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontFamily": "objektiv",
            },
            Object {
              "color": "#0b0805",
              "fontSize": 18,
            },
          ]
        }
      >
        Delete
      </Text>
    </View>
  </View>,
]
`;

exports[`render when cancel button show properly 1`] = `
Array [
  <View
    style={
      Object {
        "height": "100%",
        "opacity": 0.6,
        "position": "absolute",
        "width": "100%",
      }
    }
  />,
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "white",
          "borderRadius": 15,
          "display": "flex",
          "height": 250,
          "justifyContent": "center",
          "position": "absolute",
          "shadowColor": "#23211e",
          "top": "30%",
          "width": "90%",
        },
        Object {},
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#fff",
            "fontFamily": "objektiv",
          },
          Object {
            "color": "black",
            "fontFamily": "objektiv-semi-bold",
            "fontSize": 20,
            "textAlign": "center",
            "width": "75%",
          },
        ]
      }
    />
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#ed832d",
          "borderColor": "#ed832d",
          "borderRadius": 10,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 30,
          "opacity": 1,
          "paddingHorizontal": 30,
          "paddingVertical": 12,
          "width": "75%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontFamily": "objektiv",
            },
            Object {
              "color": "#0b0805",
              "fontSize": 18,
            },
          ]
        }
      >
        nmhjkhkkDelete
      </Text>
    </View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "white",
          "borderColor": "black",
          "borderRadius": 10,
          "borderWidth": 1,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginTop": 10,
          "opacity": 1,
          "paddingHorizontal": 30,
          "paddingVertical": 12,
          "width": "75%",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#fff",
              "fontFamily": "objektiv",
            },
            Object {
              "color": "#0b0805",
              "fontSize": 18,
            },
          ]
        }
      >
        cancel
      </Text>
    </View>
  </View>,
]
`;
